--- a/notebooks/neural_network.ipynb
+++ b/notebooks/neural_network.ipynb
@@ -386,167 +386,14 @@
     }
    ],
    "source": [
-    "df.reset_index()"
+    "df = df.reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1079,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Close</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2023-01-02</th>\n",
-       "      <td>14.456955</td>\n",
-       "      <td>15.018328</td>\n",
-       "      <td>14.381264</td>\n",
-       "      <td>14.848025</td>\n",
-       "      <td>78424700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-03</th>\n",
-       "      <td>14.091116</td>\n",
-       "      <td>14.570492</td>\n",
-       "      <td>13.958656</td>\n",
-       "      <td>14.469571</td>\n",
-       "      <td>96750300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-04</th>\n",
-       "      <td>14.538951</td>\n",
-       "      <td>14.879560</td>\n",
-       "      <td>13.769428</td>\n",
-       "      <td>13.851426</td>\n",
-       "      <td>129504000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-05</th>\n",
-       "      <td>15.062480</td>\n",
-       "      <td>15.163402</td>\n",
-       "      <td>14.602028</td>\n",
-       "      <td>14.721872</td>\n",
-       "      <td>73886000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-06</th>\n",
-       "      <td>14.974175</td>\n",
-       "      <td>15.340015</td>\n",
-       "      <td>14.854331</td>\n",
-       "      <td>15.100327</td>\n",
-       "      <td>51851500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-21</th>\n",
-       "      <td>29.720167</td>\n",
-       "      <td>29.957015</td>\n",
-       "      <td>29.458819</td>\n",
-       "      <td>29.948846</td>\n",
-       "      <td>30511900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-22</th>\n",
-       "      <td>30.006023</td>\n",
-       "      <td>30.055024</td>\n",
-       "      <td>29.703837</td>\n",
-       "      <td>29.810011</td>\n",
-       "      <td>31234700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-26</th>\n",
-       "      <td>30.487881</td>\n",
-       "      <td>30.520547</td>\n",
-       "      <td>30.079524</td>\n",
-       "      <td>30.104025</td>\n",
-       "      <td>23466800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-27</th>\n",
-       "      <td>30.512384</td>\n",
-       "      <td>30.569554</td>\n",
-       "      <td>30.324541</td>\n",
-       "      <td>30.479715</td>\n",
-       "      <td>19588500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-28</th>\n",
-       "      <td>30.414377</td>\n",
-       "      <td>30.512382</td>\n",
-       "      <td>30.251034</td>\n",
-       "      <td>30.406208</td>\n",
-       "      <td>21421900</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>248 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Close       High        Low       Open     Volume\n",
-       "Date                                                             \n",
-       "2023-01-02  14.456955  15.018328  14.381264  14.848025   78424700\n",
-       "2023-01-03  14.091116  14.570492  13.958656  14.469571   96750300\n",
-       "2023-01-04  14.538951  14.879560  13.769428  13.851426  129504000\n",
-       "2023-01-05  15.062480  15.163402  14.602028  14.721872   73886000\n",
-       "2023-01-06  14.974175  15.340015  14.854331  15.100327   51851500\n",
-       "...               ...        ...        ...        ...        ...\n",
-       "2023-12-21  29.720167  29.957015  29.458819  29.948846   30511900\n",
-       "2023-12-22  30.006023  30.055024  29.703837  29.810011   31234700\n",
-       "2023-12-26  30.487881  30.520547  30.079524  30.104025   23466800\n",
-       "2023-12-27  30.512384  30.569554  30.324541  30.479715   19588500\n",
-       "2023-12-28  30.414377  30.512382  30.251034  30.406208   21421900\n",
-       "\n",
-       "[248 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 1079,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
